# libvmod-shell

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGES.rst  README.md  README.rst  configure.ac  eval.php
src/: Makefile.am  popen_plus.c  vmod_shell.c  vmod_shell.vcc
src/tests/: test01.vtc
